--- a/BookEcommerce_ASP.NETCore MVC/Views/Home/Index.cshtml
+++ b/BookEcommerce_ASP.NETCore MVC/Views/Home/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@inject ClassLibrary_RepositoryDLL.Services.IMenuService mnservice
 @inject ClassLibrary_RepositoryDLL.Services.IProductService ptservice
+@inject ClassLibrary_RepositoryDLL.Services.IBookBannerService bnservice
 @model ClassLibrary_RepositoryDLL.Models.ProductModel
-
 <div class="header">
             <div class="container-fluid">
                 <div class="row">
@@ -13,7 +13,7 @@
                                    @foreach (var item in mnservice.getAllCategories() as List<ClassLibrary_RepositoryDLL.Entities.Category>)
                                 {
                                     <li class="nav-item">
-                                        <a class="nav-link" href="~/Home/Product/@item.Id"><i class="fa fa-home"></i>@item.Categoryname</a>
+                                        <a class="nav-link" href="~/Home/Product/@item.Categoryname"><i class="fa fa-home"></i>@item.Categoryname</a>
                                     </li>
                                 }
                             </ul>
@@ -22,43 +22,20 @@
          
             <div class="col-md-6">
                         <div class="header-slider normal-slider">
+                        @foreach(var item in ptservice.getAllBook() as List<ClassLibrary_RepositoryDLL.Models.ProductModel>)
+                            {
                             <div class="header-slider-item">
-                                <img src="img/slider-1.jpg" alt="Slider Image" />
-                                <div class="header-slider-caption">
-                                    <p>Some text goes here that describes the image</p>
-                                    <a class="btn" href=""><i class="fa fa-shopping-cart"></i>Mua Ngay</a>
-                                </div>
+                                 <div class="product-image">
+                                         <a href="~/Home/ProductDetail/@item.Id">
+                                            <img src="~/image/@item.Image" alt="Slider Image"/>
+                                         </a> 
+                                        <div class="header-slider-caption">
+                                             <a href="~/Home/ProductDetail/@item.Id"><p>@item.Name</p></a> 
+                                             <a class="btn" href="~/product/AddToCart/@item.Id"><i class="fa fa-shopping-cart"></i>Mua Ngay</a>
+                                        </div>
+                                 </div>
                             </div>
-                            <div class="header-slider-item">
-                                <img src="img/slider-2.jpg" alt="Slider Image" />
-                                <div class="header-slider-caption">
-                                    <p>Some text goes here that describes the image</p>
-                                    <a class="btn" href=""><i class="fa fa-shopping-cart"></i>Mua Ngay</a>
-                                </div>
-                            </div>
-                            <div class="header-slider-item">
-                                <img src="img/slider-3.jpg" alt="Slider Image" />
-                                <div class="header-slider-caption">
-                                    <p>Some text goes here that describes the image</p>
-                                    <a class="btn" href=""><i class="fa fa-shopping-cart"></i>Shop Now</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-3">
-                        <div class="header-img">
-                            <div class="img-item">
-                                <img src="img/category-1.jpg" />
-                                <a class="img-text" href="">
-                                    <p>Some text goes here that describes the image</p>
-                                </a>
-                            </div>
-                            <div class="img-item">
-                                <img src="img/category-2.jpg" />
-                                <a class="img-text" href="">
-                                    <p>Some text goes here that describes the image</p>
-                                </a>
-                            </div>
+                            }
                         </div>
                     </div>
                 </div>
@@ -109,23 +86,7 @@
                 </div>
             </div>
         </div>
-        <!-- Feature End-->           
-        
-        <!-- Call to Action Start -->
-       <!-- <div class="call-to-action">
-            <div class="container-fluid">
-                <div class="row align-items-center">
-                    <div class="col-md-6">
-                        <h1>call us for any queries</h1>
-                    </div>
-                    <div class="col-md-6">
-                        <a href="tel:0123456789">+012-345-6789</a>
-                    </div>
-                </div>
-            </div>
-        </div>-->
-        <!-- Call to Action End -->       
-        
+        <!-- Feature End-->              
         <!-- Featured Product Start -->
         <div class="featured-product product">
             <div class="container-fluid">
@@ -134,36 +95,36 @@
                 </div>
                 <div class="row align-items-center product-slider product-slider-4">
              @foreach (var item in ptservice.getAllBook() as List<ClassLibrary_RepositoryDLL.Models.ProductModel>)  
-          {
-            <div class="col-lg-3">
-                        <div class="product-item">
-                            <div class="product-title">
-                                <a href="#">@item.Name</a>
-                                <div class="ratting">
-                                    <i class="fa fa-star"></i>
-                                    <i class="fa fa-star"></i>
-                                    <i class="fa fa-star"></i>
-                                    <i class="fa fa-star"></i>
-                                    <i class="fa fa-star"></i>
-                                </div>
-                            </div>
-                            <div class="product-image">
-                                <a href="~/Home/ProductDetail/@item.Id">
-                                    <img src="/image/@item.Image" alt="Product Image">
-                                </a>
-                                <div class="product-action">
-                                    <a href="#"><i class="fa fa-cart-plus"></i></a>
-                                    <a href="#"><i class="fa fa-heart"></i></a>
-                                    <a href="~/Home/ProductDetail/@item.Id"><i class="fa fa-search"></i></a>
-                                </div>
-                            </div>
-                            <div class="product-price">
-                                <h3>@item.Price<span>.000đ</span></h3>
-                                <a class="btn" href=""><i class="fa fa-shopping-cart"></i>Mua Ngay</a>
-                            </div>
-                        </div>
-                    </div>
-            } 
+                 {
+                        <div class="col-lg-3">
+                                    <div class="product-item">
+                                        <div class="product-title">
+                                            <a href="~/Home/ProductDetail/@item.Id">@item.Name</a>
+                                            <div class="ratting">
+                                                <i class="fa fa-star"></i>
+                                                <i class="fa fa-star"></i>
+                                                <i class="fa fa-star"></i>
+                                                <i class="fa fa-star"></i>
+                                                <i class="fa fa-star"></i>
+                                            </div>
+                                        </div>
+                                        <div class="product-image">
+                                            <a href="~/Home/ProductDetail/@item.Id">
+                                                <img src="/image/@item.Image" alt="Product Image">
+                                            </a>
+                                            <div class="product-action">
+                                                <a href="~/product/AddToCart/@item.Id"><i class="fa fa-cart-plus"></i></a>
+                                                <a href="~/Home/Wishlist"><i class="fa fa-heart"></i></a>
+                                                <a href="~/Home/ProductDetail/@item.Id"><i class="fa fa-search"></i></a>
+                                            </div>
+                                        </div>
+                                        <div class="product-price">
+                                            <h3>@item.Price<span>.000đ</span></h3>
+                                            <a class="btn" href="~/product/AddToCart/@item.Id"><i class="fa fa-shopping-cart"></i>Mua Ngay</a>
+                                        </div>
+                                    </div>
+                         </div>
+                  } 
                 </div>
             </div>
         </div>
@@ -196,14 +157,14 @@
                                     <img src="~/image/@item.Image" alt="Product Image">
                                 </a>
                                 <div class="product-action">
-                                    <a href="#"><i class="fa fa-cart-plus"></i></a>
+                                    <a href="~/product/AddToCart/@item.Id"><i class="fa fa-cart-plus"></i></a>
                                     <a href="#"><i class="fa fa-heart"></i></a>
                                     <a href="#"><i class="fa fa-search"></i></a>
                                 </div>
                             </div>
                             <div class="product-price">
                                 <h3>@item.Price<span>.000đ</span></h3>
-                                <a class="btn" href=""><i class="fa fa-shopping-cart"></i>Mua Ngay</a>
+                                <a class="btn" href="~/product/AddToCart/@item.Id"><i class="fa fa-shopping-cart"></i>Mua Ngay</a>
                             </div>
                         </div>
                     </div>
