--- a/BookEcommerce_ASP.NETCore MVC/Views/Home/Wishlist.cshtml
+++ b/BookEcommerce_ASP.NETCore MVC/Views/Home/Wishlist.cshtml
@@ -1,35 +1,42 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
+﻿@inject ClassLibrary_RepositoryDLL.Services.IProductService ptservice
+@model ClassLibrary_RepositoryDLL.Models.ProductModel
+@inject ClassLibrary_RepositoryDLL.Services.ICartItemService cartservice
+
 @{
     Layout = "/Views/Shared/_Layout.cshtml";
+
 }
+
+
 <!-- Wishlist Start -->
-        <div class="wishlist-page">
-            <div class="container-fluid">
-                <div class="wishlist-page-inner">
-                    <div class="row">
-                        <div class="col-md-12">
-                            <div class="table-responsive">
-                                <table class="table table-bordered">
-                                    <thead class="thead-dark">
-                                        <tr>
-                                            <th>Sản Phẩm</th>
-                                            <th>Giá</th>
-                                            <th>Số Lượng</th>
-                                            <th>Thêm Vào Giỏ</th>
-                                            <th>Xóa</th>
-                                        </tr>
-                                    </thead>
-                                    <tbody class="align-middle">
+<div class="wishlist-page">
+    <div class="container-fluid">
+        <div class="wishlist-page-inner">
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="table-responsive">
+                       
+                            <table class="table table-bordered">
+                                <thead class="thead-dark">
+                                    <tr>
+                                        <th>Sản Phẩm</th>
+                                        <th>Giá</th>
+                                        <th>Số Lượng</th>
+                                        <th>Thêm Vào Giỏ</th>
+                                        <th>Xóa</th>
+                                    </tr>
+                                </thead>
+                                <tbody class="align-middle">
+                                         @foreach(var item in cartservice.getAllBook() as List<ClassLibrary_RepositoryDLL.Models.ProductModel>)       
+                                            {
                                         <tr>
                                             <td>
                                                 <div class="img">
-                                                    <a href="#"><img src="img/product-6.jpg" alt="Image"></a>
-                                                    <p>Tên Sản Phẩm</p>
+                                                    <a href="#"><img src="~/image/@Model.Image" alt="Image"></a>
+                                                    <p>@Model.Name</p>
                                                 </div>
                                             </td>
-                                            <td>$99</td>
+                                            <td>@Model.Price</td>
                                             <td>
                                                 <div class="qty">
                                                     <button class="btn-minus"><i class="fa fa-minus"></i></button>
@@ -37,84 +44,14 @@
                                                     <button class="btn-plus"><i class="fa fa-plus"></i></button>
                                                 </div>
                                             </td>
-                                            <td><button class="btn-cart">Thêm Vào Giỏ</button></td>
-                                            <td><button><i class="fa fa-trash"></i></button></td>
+                                            <td><button class="btn-cart" href="~/Home/Cart" >Thêm Vào Giỏ</button></td>
+                                            <td><a asp-route="RemoveCartItem" asp-route-bookid ="@Model.Id"><i class="fa fa-trash"></i></a></td>
                                         </tr>
-                                        <tr>
-                                            <td>
-                                                <div class="img">
-                                                    <a href="#"><img src="img/product-7.jpg" alt="Image"></a>
-                                                    <p>Tên Sản Phẩm</p>
-                                                </div>
-                                            </td>
-                                            <td>$99</td>
-                                            <td>
-                                                <div class="qty">
-                                                    <button class="btn-minus"><i class="fa fa-minus"></i></button>
-                                                    <input type="text" value="1">
-                                                    <button class="btn-plus"><i class="fa fa-plus"></i></button>
-                                                </div>
-                                            </td>
-                                            <td><button class="btn-cart">Thêm Vào Giỏ</button></td>
-                                            <td><button><i class="fa fa-trash"></i></button></td>
-                                        </tr>
-                                        <tr>
-                                            <td>
-                                                <div class="img">
-                                                    <a href="#"><img src="img/product-8.jpg" alt="Image"></a>
-                                                    <p>Tên Sản Phẩm</p>
-                                                </div>
-                                            </td>
-                                            <td>$99</td>
-                                            <td>
-                                                <div class="qty">
-                                                    <button class="btn-minus"><i class="fa fa-minus"></i></button>
-                                                    <input type="text" value="1">
-                                                    <button class="btn-plus"><i class="fa fa-plus"></i></button>
-                                                </div>
-                                            </td>
-                                            <td><button class="btn-cart">Thêm Vào Giỏ</button></td>
-                                            <td><button><i class="fa fa-trash"></i></button></td>
-                                        </tr>
-                                        <tr>
-                                            <td>
-                                                <div class="img">
-                                                    <a href="#"><img src="img/product-9.jpg" alt="Image"></a>
-                                                    <p>Tên Sản Phẩm</p>
-                                                </div>
-                                            </td>
-                                            <td>$99</td>
-                                            <td>
-                                                <div class="qty">
-                                                    <button class="btn-minus"><i class="fa fa-minus"></i></button>
-                                                    <input type="text" value="1">
-                                                    <button class="btn-plus"><i class="fa fa-plus"></i></button>
-                                                </div>
-                                            </td>
-                                            <td><button class="btn-cart">Thêm Vào Giỏ</button></td>
-                                            <td><button><i class="fa fa-trash"></i></button></td>
-                                        </tr>
-                                        <tr>
-                                            <td>
-                                                <div class="img">
-                                                    <a href="#"><img src="img/product-10.jpg" alt="Image"></a>
-                                                    <p>Tên Sản Phẩm</p>
-                                                </div>
-                                            </td>
-                                            <td>$99</td>
-                                            <td>
-                                                <div class="qty">
-                                                    <button class="btn-minus"><i class="fa fa-minus"></i></button>
-                                                    <input type="text" value="1">
-                                                    <button class="btn-plus"><i class="fa fa-plus"></i></button>
-                                                </div>
-                                            </td>
-                                            <td><button class="btn-cart">Thêm Vào Giỏ</button></td>
-                                            <td><button><i class="fa fa-trash"></i></button></td>
-                                        </tr>
-                                    </tbody>
-                                </table>
-                            </div>
+                                        }
+                                </tbody>
+                            </table>
+                        
+                    </div>
                         </div>
                     </div>
                 </div>
