--- a/BookEcommerce_ASP.NETCore MVC/Views/Product/Cart.cshtml
+++ b/BookEcommerce_ASP.NETCore MVC/Views/Product/Cart.cshtml
@@ -5,85 +5,89 @@
     Layout = "/Views/Shared/_Layout.cshtml";
     double? total =0;
 }
+
 <div class="cart-page">
+
             <div class="container-fluid">
+
                 <div class="row">
                     <div class="col-lg-8">
                         <div class="cart-page-inner">
                             <div class="table-responsive">
-
-                        @if (Model.Count > 0)
-                        {
-                            <table class="table table-bordered">
-                                <thead class="thead-dark">
-                                    <tr>
-                                        <th>Sản Phẩm</th>
-                                        <th>Giá</th>
-                                        <th>Số Lượng</th>
-                                        <th>Thành Tiền</th>
-                                        <th>Xóa</th>
-                                    </tr>
-                                </thead>
-                                @foreach (var cartitem in Model)
+                                @if(Model.Count>0)
                                 {
-                                    var multiplyQuantity = cartitem.Quantity * cartitem.Book.Price;
-                                    total += multiplyQuantity;
+                                <table class="table table-bordered">
+                                    <thead class="thead-dark">
+                                        <tr>
+                                            <th>Sản Phẩm</th>
+                                            <th>Giá</th>
+                                            <th>Số Lượng</th>
+                                            <th>Thành Tiền</th>
+                                            <th>Xóa</th>
+                                            <th>Update</th>
+                                        </tr>
+                                    </thead>
+                                    @foreach(var cartItem in Model)
+                                    {
+                                    var thanhtien = @cartItem.Quantity * cartItem.Book.Price;
+                                    total += thanhtien;
                                     <tbody class="align-middle">
                                         <tr>
                                             <td>
                                                 <div class="img">
-                                                    <a href="~/Home/ProductDetail/@cartitem.Book.Id"><img src="~/image/@cartitem.Book.Image" alt="Image"></a>
-                                                    <p>@cartitem.Book.Bookname</p>
+                                                    <a href="~/Home/ProductDetail/@cartItem.Book.Id"><img src="~/image/@cartItem.Book.Image" alt="Image"></a>
+                                                    <p>@cartItem.Book.Bookname</p>
                                                 </div>
                                             </td>
-                                            <td>@cartitem.Book.Price</td>
+                                            <td>@cartItem.Book.Price</td>
                                             <td>
                                                 <div class="qty">
                                                     <button class="btn-minus"><i class="fa fa-minus"></i></button>
-                                                    <input type="text" value="1">
+                                                    <input type="text" value="1" asp-for="@cartItem.Quantity" id="@($"quantity-{cartItem.Book.Id}")">
                                                     <button class="btn-plus"><i class="fa fa-plus"></i></button>
                                                 </div>
                                             </td>
-                                            <td>@(cartitem.Book.Price*cartitem.Quantity)<span>.000đ</span></td>
-                                            <td><a asp-action="RemoveCartItem" asp-route-id="@cartitem.BookId."><i class="fa fa-trash"></i></a></td>
-                                        </tr>
+                                            <td>@thanhtien</td>
+                                            <td><a asp-action="RemoveCartItem" asp-route-id="@cartItem.BookId"><i class="fa fa-trash"></i></a></td>
+                                            <td><a asp-action="UpdateCart" asp-route-id="@cartItem.BookId"><i class="fa fa-check"></i></a></td>
 
+                                        </tr>
+                 
                                     </tbody>
+                                    }
+                                </table>
                                 }
-                            </table>
-                        }
-                    </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-4">
-                        <div class="cart-page-inner">
-                            <div class="row">
-                                <div class="col-md-12">
-                                    <div class="coupon">
-                                        <input type="text" placeholder="Mã Giảm Giá">
-                                        <button>Nhập</button>
-                                    </div>
-                                </div>
-                                <div class="col-md-12">
-                                @foreach (var cartitem in Model)
-                                {
-                                    <div class="cart-summary">
-                                         
-                                        <div class="cart-content">
-                                            <h1>Tổng Thanh Toán</h1>
-                                            <p>Thành Tiền: @(cartitem.Book.Price*cartitem.Quantity).000đ</p>
-                                            <h2>Tổng Tiền: @total.000đ</h2>
-                                        </div>
-                                        <div class="cart-btn">
-                                             <a asp-action="UpdateCart" asp-route-id="@cartitem.BookId" class="btn btn-success">Cập Nhật</a>
-                                             <a asp-controller="Home" asp-action="Checkout" class="btn btn-success">Checkout</a>
-                                        </div>
-                                    </div>
-                                }
-                                </div>
                             </div>
                         </div>
                     </div>
+                    <div class="col-lg-4">
+
+                        <div class="cart-page-inner">
+
+                            <div class="row">
+                                
+                                <div class="col-md-12">
+                                    <div class="cart-summary">
+                                        <div class="cart-content">
+                                            <h1>Tổng Thanh Toán</h1>
+                                            <p>Thành Tiền: <span>$99</span></p>
+                                            <p>Giá Ship: <span>$1</span></p>
+                                            <h2>Tổng Tiền: <span>$100</span></h2>
+                                        </div>
+                                        <div class="cart-btn">
+                                            <button>Thanh Toán</button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                        </div>
+
+
+                    </div>
                 </div>
+
+
             </div>
+
         </div>
