--- a/BookEcommerce_ASP.NETCore MVC/Views/Home/ProductDetail.cshtml
+++ b/BookEcommerce_ASP.NETCore MVC/Views/Home/ProductDetail.cshtml
@@ -28,6 +28,7 @@
                                     </div>*@
                                 </div>
                                 <div class="col-md-7">
+                                     
                                     <div class="product-content">
                                         <div class="title"><h2>@Model.Bookname</h2></div>
 
@@ -35,21 +36,13 @@
                                             <h4>Price:</h4>
                                             <p>@Model.Price</p><p>.000đ</p>
                                         </div>
-                                        <div class="quantity">
-                                            <h4>Quantity:</h4>
-                                            <div class="qty">
-                                                <button class="btn-minus"><i class="fa fa-minus"></i></button>
-                                                <input type="text" value="1">
-                                                <button class="btn-plus"><i class="fa fa-plus"></i></button>
-                                            </div>
-                                        </div>
-                                        
                                         
                                         <div class="action">
                                             <a class="btn" href="#"><i class="fa fa-shopping-cart"></i>Thêm Vào Giỏ</a>
-                                            <a class="btn" href="#"><i class="fa fa-shopping-bag"></i>Mua Ngay</a>
+                                            <a class="btn" href="~/product/AddToCart/@Model.Id"><i class="fa fa-shopping-bag"></i>Mua Ngay</a>
                                         </div>
                                     </div>
+
                                 </div>
                             </div>
                         </div>
