--- a/BookEcommerce_ASP.NETCore MVC/Views/Home/Product.cshtml
+++ b/BookEcommerce_ASP.NETCore MVC/Views/Home/Product.cshtml
@@ -1,5 +1,6 @@
 ﻿@inject ClassLibrary_RepositoryDLL.Services.IProductService ptservice 
 @inject ClassLibrary_RepositoryDLL.Services.IMenuService mnservice
+@inject ClassLibrary_RepositoryDLL.Services.IAuthorService auservice
 @model ClassLibrary_RepositoryDLL.Entities.CartItem
 
 @{
@@ -125,28 +126,13 @@
                             <h2 class="title">Nhà Xuất Bản</h2>
                        
                             <ul>
-                        @foreach(var item in ptservice.getAllBook() as List<ClassLibrary_RepositoryDLL.Models.ProductModel>)
+                        @foreach(var item in auservice.getAllAuthor() as List<ClassLibrary_RepositoryDLL.Entities.Author>)
                         {
-                                <li><a href="#">@item.Authorname</a><span>(@item.StorageQuantity)</span></li>
+                                <li><a href="~/Home/Product/@item.Books">@item.Authorname</a></li>
                         }
                             </ul>
                         </div>
-                        
-                        <div class="sidebar-widget tag">
-                            <h2 class="title">Thẻ Tag</h2>
-                            <a href="#">Lorem ipsum</a>
-                            <a href="#">Vivamus</a>
-                            <a href="#">Phasellus</a>
-                            <a href="#">pulvinar</a>
-                            <a href="#">Curabitur</a>
-                            <a href="#">Fusce</a>
-                            <a href="#">Sem quis</a>
-                            <a href="#">Mollis metus</a>
-                            <a href="#">Sit amet</a>
-                            <a href="#">Vel posuere</a>
-                            <a href="#">orci luctus</a>
-                            <a href="#">Nam lorem</a>
-                        </div>
+
                     </div>
                     <!-- Side Bar End -->
                 </div>
